--- a/playground.ipynb
+++ b/playground.ipynb
@@ -27,9 +27,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "angka sekarang 0\n",
+      "angka sekarang 1\n",
+      "angka sekarang 2\n",
+      "angka sekarang 3\n",
+      "angka sekarang 4\n"
+     ]
+    }
+   ],
    "source": [
     "angka = [0,1,2,3,4]\n",
     "for i in angka :\n",
@@ -46,9 +58,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "k\n",
+      "u\n",
+      " \n",
+      "s\n",
+      "u\n",
+      "k\n",
+      "a\n",
+      " \n",
+      "p\n",
+      "r\n",
+      "o\n",
+      "g\n",
+      "r\n",
+      "a\n",
+      "m\n",
+      "a\n",
+      " \n",
+      "k\n",
+      "o\n",
+      "m\n",
+      "p\n",
+      "u\n",
+      "t\n",
+      "e\n",
+      "r\n"
+     ]
+    }
+   ],
    "source": [
     "kalimat = \"Aku suka programa komputer\"\n",
     "for huruf in kalimat:\n",
@@ -448,11 +493,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C\n",
+      "h\n",
+      "a\n",
+      "n\n",
+      "i\n",
+      "s\n",
+      "a\n",
+      " \n",
+      "U\n",
+      "l\n",
+      "k\n",
+      "a\n",
+      "r\n",
+      "i\n",
+      "m\n",
+      "a\n",
+      "h\n"
+     ]
+    }
+   ],
    "source": [
-    "# kerjakan latihan 1 di sini!"
+    "# kerjakan latihan 1 di sini!\n",
+    "\n",
+    "nama = 'Chanisa Ulkarimah'\n",
+    "\n",
+    "for karakter in nama:\n",
+    "    print(karakter)"
    ]
   },
   {
@@ -465,11 +539,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Programa Komputer\n",
+      "Aku sangat suka mata kuliah Programa Komputer\n",
+      "Kalkulus\n",
+      "Fisika Dasar\n",
+      "Mekanika Teknik\n",
+      "Material Teknik\n",
+      "Psikologi Industri\n",
+      "Biologi\n"
+     ]
+    }
+   ],
    "source": [
-    "# kerjakan latihan 2 di sini!"
+    "# kerjakan latihan 2 di sini!\n",
+    "\n",
+    "matkul = ['Programa Komputer', 'Kalkulus', 'Fisika Dasar', 'Mekanika Teknik', 'Material Teknik', 'Psikologi Industri', 'Biologi']\n",
+    "\n",
+    "for mata_kuliah in matkul:\n",
+    "    print(mata_kuliah)\n",
+    "    if mata_kuliah == 'Programa Komputer':\n",
+    "        print('Aku sangat suka mata kuliah', mata_kuliah)"
    ]
   }
  ],
@@ -489,7 +585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
